Service and repository v2

--- a/GHSMS/GHSMS/appsettings.json
+++ b/GHSMS/GHSMS/appsettings.json
@@ -6,6 +6,12 @@
     }
   },
   "AllowedHosts": "*",
+  "Jwt": {
+    "SecretKey": "YourSuperSecretKeyThatIsAtLeast32CharactersLongForGHSMS2024!",
+    "Issuer": "GHSMS",
+    "Audience": "GHSMS-Users",
+    "ExpirationMinutes": "60"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=localhost;Initial Catalog=GenderHealthcareDB;User ID=sa;Password=12345;Trust Server Certificate=True"
   }
