add reminder for pill

--- a/GHSMS/GHSMS/appsettings.json
+++ b/GHSMS/GHSMS/appsettings.json
@@ -14,5 +14,12 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=localhost;Initial Catalog=GenderHealthcareDB;User ID=sa;Password=12345;Trust Server Certificate=True"
+  },
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SenderEmail": "thiennhse184989@fpt.edu.vn",
+    "SenderPassword": "fzxt xusy apht qzfw",
+    "SenderName": "GHSMS Health Notifications"
   }
 }
